force-app/main/default/objects/Submit_Resource_Request__e/Submit_Resource_Request__e.object-meta.xml
<CustomObject>
    <label>Submit Resource Request</label>
    <pluralLabel>Submit Resource Requests</pluralLabel>
</CustomObject>