force-app/main/default/objects/Submit_Resource_Request__e/fields/FulfillmentMode__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentMode__c</fullName>
    <label>FulfillmentMode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>