force-app/main/default/objects/Submit_Resource_Request__e/fields/JobGrade__c.field-meta.xml
<CustomField>
    <fullName>JobGrade__c</fullName>
    <label>JobGrade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>