force-app/main/default/objects/Submit_Resource_Request__e/fields/JobRoleName__c.field-meta.xml
<CustomField>
    <fullName>JobRoleName__c</fullName>
    <label>JobRoleName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>