force-app/main/default/objects/Submit_Resource_Request__e/fields/RequestCreatedByEmplid__c.field-meta.xml
<CustomField>
    <fullName>RequestCreatedByEmplid__c</fullName>
    <label>RequestCreatedByEmplid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>