force-app/main/default/objects/Submit_Resource_Request__e/fields/RequestedCentreCode__c.field-meta.xml
<CustomField>
    <fullName>RequestedCentreCode__c</fullName>
    <label>RequestedCentreCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>