force-app/main/default/objects/Submit_Resource_Request__e/fields/RequestforEmpIid__c.field-meta.xml
<CustomField>
    <fullName>RequestforEmpIid__c</fullName>
    <label>RequestforEmpIid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>