force-app/main/default/objects/Submit_Resource_Request__e/fields/RequestNo__c.field-meta.xml
<CustomField>
    <fullName>RequestNo__c</fullName>
    <label>RequestNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>