force-app/main/default/objects/Submit_Resource_Request__e/fields/RequiredStandby__c.field-meta.xml
<CustomField>
    <fullName>RequiredStandby__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RequiredStandby</label>
    <type>Checkbox</type>
</CustomField>