force-app/main/default/objects/Submit_Resource_Request__e/fields/ResourceRequestId__c.field-meta.xml
<CustomField>
    <fullName>ResourceRequestId__c</fullName>
    <label>ResourceRequestId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>