force-app/main/default/objects/Submit_Resource_Request__e/fields/RevisedAssignmentEndDate__c.field-meta.xml
<CustomField>
    <fullName>RevisedAssignmentEndDate__c</fullName>
    <label>RevisedAssignmentEndDate</label>
    <type>DateTime</type>
</CustomField>