force-app/main/default/objects/Submit_Resource_Request__e/fields/RevisedAssignmentStartDate__c.field-meta.xml
<CustomField>
    <fullName>RevisedAssignmentStartDate__c</fullName>
    <label>RevisedAssignmentStartDate</label>
    <type>DateTime</type>
</CustomField>