force-app/main/default/objects/Submit_Resource_Request__e/fields/WorkLocation__c.field-meta.xml
<CustomField>
    <fullName>WorkLocation__c</fullName>
    <label>WorkLocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>